Fixed openssl support

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,8 +39,8 @@
   shell: "env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig ./buildconf"
   args:
     chdir: "{{ APP_SRC }}"
-- name: "Run env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig ./configure --prefix={{ APP_PREFIX }}"
-  shell: "env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig ./configure --prefix={{ APP_PREFIX }}"
+- name: "Run env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig ./configure --prefix={{ APP_PREFIX }} --with-openssl"
+  shell: "env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig ./configure --prefix={{ APP_PREFIX }} --with-openssl"
   args:
     chdir: "{{ APP_SRC }}"
 - name: "Run env PKG_CONFIG_PATH={{ APP_PREFIX }}/lib64/pkgconfig:{{ APP_PREFIX }}/lib/pkgconfig make -j $(nproc)"
